kubernetes/archive/deploy/unifi-os/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: unifi-os
  name: unifi-os
  namespace: unifi-os
spec:
  progressDeadlineSeconds: 600
  replicas: 1
  selector:
    matchLabels:
      name: unifi-os
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        name: unifi-os
    spec:
      automountServiceAccountToken: false
      containers:
      - env:
        - name: UOS_SYSTEM_IP
          value: unifi.vandeneede.org
        image: ghcr.io/lemker/unifi-os-server:latest
        securityContext:
          privileged: true
        imagePullPolicy: Always
        name: unifi-os
        
        # --- Probes ---
        livenessProbe:
          httpGet:
            path: /api/ping
            port: 80
          initialDelaySeconds: 10          
          periodSeconds: 60
          timeoutSeconds: 5
          successThreshold: 1
          failureThreshold: 3
        # ---------------
        volumeMounts:
        - name: unifi-os-server-data
          mountPath: /persistent
          subPath: persistent
        - name: unifi-os-server-data
          mountPath: /var/log
          subPath: log
        - name: unifi-os-server-data
          mountPath: /data
          subPath: data
        - name: unifi-os-server-data
          mountPath: /srv
          subPath: srv
        - name: unifi-os-server-data
          mountPath: /var/lib/unifi
          subPath: unifi
        - name: unifi-os-server-data
          mountPath: /var/lib/mongodb
          subPath: mongodb
        - name: unifi-os-server-data
          mountPath: /etc/rabbitmq/ssl
          subPath: rabbitmq
      terminationGracePeriodSeconds: 30
      volumes:
      - name: unifi-os-server-data
        persistentVolumeClaim:
          claimName: unifi-os
