kubernetes/archive/deploy/unifi-os/ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: unifi-os
  namespace: unifi-os
  annotations: 
    kubernetes.io/ingress.class: traefik-internal
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`unifi.vandeneede.org`)
      services:
        - name: unifi-web
          port: webui
          scheme: https
